-
Bug
-
Resolution: Done
-
P2: Important
-
4.8.4
-
None
While fixing QTBUG-2318 there are now two Translation-Entries in the RC-File, one taken the new rcLang and one with a fixed value.
This patch fixes that
--- d:\qt\4.8.4.org\qmake\generators\win32\winmakefile.cpp 2012-11-23 12:11:22.000000000 +0100 +++ d:\qt\4.8.4\qmake\generators\win32\winmakefile.cpp 2012-12-14 17:24:56.000000000 +0100 @@ -463,16 +463,12 @@ ts << "\t\tBLOCK \"VarFileInfo\"" << endl; ts << "\t\tBEGIN" << endl; ts << "\t\t\tVALUE \"Translation\", " << QString("0x%1").arg(rcLang, 4, 16, QLatin1Char('0')) << ", " << QString("%1").arg(rcCodePage, 4) << endl; ts << "\t\tEND" << endl; - ts << "\t\tBLOCK \"VarFileInfo\"" << endl; - ts << "\t\tBEGIN" << endl; - ts << "\t\t\tVALUE \"Translation\", 0x409, 1200" << endl; - ts << "\t\tEND" << endl; ts << "\tEND" << endl; ts << "/* End of Version info */" << endl; ts << endl; ts.flush();