fix duplicate TRANSLATION entry in generated RC file

Task-number: QTBUG-28625

Change-Id: I9bd6098c7557ca008211acef172f5c51a6766998
Reviewed-by: Oswald Buddenhagen <oswald.buddenhagen@digia.com>

cregit: 3e94e8daf36e90e73ca475a81c9b9a3af40b45b3 https://github.com/qt/qtbase/commit/3e94e8daf36e90e73ca475a81c9b9a3af40b45b3